@@ -137,21 +137,18 @@
             <plugin>
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
-                <version>1.16.1</version>
+                <version>1.15.0</version>
                 <dependencies>
                     <dependency>
                         <groupId>org.pitest</groupId>
                         <artifactId>pitest-junit5-plugin</artifactId>
-                        <version>0.15</version>
+                        <version>1.1.2</version>
                     </dependency>
                 </dependencies>
                 <configuration>
-                    <targetClasses>
-                        <param>com.example.cyberlarpapi.*</param>
-                    </targetClasses>
-                    <targetTests>
-                        <param>com.example.cyberlarpapi.*</param>
-                    </targetTests>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
